# compactor

./: .gitignore  README.md  old.toml  old.txt  pyproject.toml  requirements.txt  {report_name}.md
.devcontainer/: devcontainer.json
db/: chroma.sqlite3
src/: app.py  crew.py
src/compactor/: app.py  crew.py
src/compactor/config/: agents.yaml  tasks.yaml
src/compactor/tools/: custom_tool.py
src/config/: tasks.yaml
