[project]
name = "compactor"
version = "0.1.0"
description = "compactor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "google-generativeai>=0.1",
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
compactor = "compactor.main:run"
run_crew = "compactor.main:run"
train = "compactor.main:train"
replay = "compactor.main:replay"
test = "compactor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
